--- a/src/style.css
+++ b/src/style.css
@@ -1,191 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
-body {
-    font-family: 'Roboto', sans-serif;
-  }
-
-.heading {
-    width: 400px;
-    margin: 20px auto;
-    color: #009BFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    clear: both;
-    display: block;
-    padding: 0px 0px;
-}
-
-.card {
-    width: 400px;
-    margin: 10px auto;
-    clear: both;
-    display: block;
-    padding: 0px 0px;
-    /* background-color: #009BFF;
-    border-radius: 4px; */
-}
-.card::after {
-    clear: both;
-    display: block;
-    content: "";
-}
-
-/* box */
-.card .circular-container {
-  background-color: #0067FF;
-  height: 60px;
-  border-radius: 10px;
-}
-
-/* text */
-.input-title { 
-    display: block;
-    position: relative; 
-    clear: both;
-    margin: 0px 0px 0px 70px;
-    font-size: 30px;
-    color: rgba(255,255,255,.8);
-    font-weight: 500;
-}
-
-/* Styling Checkbox Starts */
-
-/* checkbox */
-.checkbox-label {
-    display: block;
-    position: absolute;
-    margin: 15px 0px 0px 40px;
-    cursor: pointer;
-    font-size: 22px;
-    line-height: 24px;
-    height: 24px;
-    width: 24px;
-    clear: both;
-}
-
-.checkbox-label input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.checkbox-label .checkbox-custom {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 24px;
-    width: 24px;
-    background-color: transparent;
-    border-radius: 5px;
-    transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    border: 2px solid #FFFFFF;
-}
-
-.checkbox-label input:checked ~ .checkbox-custom {
-    background-color: #FFFFFF;
-    border-radius: 5px;
-    -webkit-transform: rotate(0deg) scale(1);
-    -ms-transform: rotate(0deg) scale(1);
-    transform: rotate(0deg) scale(1);
-    opacity:1;
-    border: 2px solid #FFFFFF;
-}
-
-.checkbox-label .checkbox-custom::after {
-    position: absolute;
-    content: "";
-    left: 12px;
-    top: 12px;
-    height: 0px;
-    width: 0px;
-    border-radius: 5px;
-    border: solid #009BFF;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(0deg) scale(0);
-    -ms-transform: rotate(0deg) scale(0);
-    transform: rotate(0deg) scale(0);
-    opacity:1;
-    transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-}
-
-.checkbox-label input:checked ~ .checkbox-custom::after {
-  -webkit-transform: rotate(45deg) scale(1);
-  -ms-transform: rotate(45deg) scale(1);
-  transform: rotate(45deg) scale(1);
-  opacity:1;
-  left: 8px;
-  top: 3px;
-  width: 6px;
-  height: 12px;
-  border: solid #009BFF;
-  border-width: 0 2px 2px 0;
-  background-color: transparent;
-  border-radius: 0;
-}
-
-/* For Ripple Effect */
-.checkbox-label .checkbox-custom::before {
-    position: absolute;
-    content: "";
-    left: 10px;
-    top: 10px;
-    width: 0px;
-    height: 0px;
-    border-radius: 5px;
-    border: 2px solid #FFFFFF;
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);    
-}
-
-.checkbox-label input:checked ~ .checkbox-custom::before {
-    left: -3px;
-    top: -3px;
-    width: 24px;
-    height: 24px;
-    border-radius: 5px;
-    -webkit-transform: scale(3);
-    -ms-transform: scale(3);
-    transform: scale(3);
-    opacity:0;
-    z-index: 999;
-    transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-}
-
-/* Style for Circular Checkbox */
-.checkbox-label .checkbox-custom.circular {
-    border-radius: 50%;
-    border: 2px solid #FFFFFF;
-}
-
-.checkbox-label input:checked ~ .checkbox-custom.circular {
-    background-color: #FFFFFF;
-    border-radius: 50%;
-    border: 2px solid #FFFFFF;
-}
-.checkbox-label input:checked ~ .checkbox-custom.circular::after {
-    border: solid #0067FF;
-    border-width: 0 2px 2px 0;
-}
-.checkbox-label .checkbox-custom.circular::after {
-    border-radius: 50%;
-}
-
-.checkbox-label .checkbox-custom.circular::before {
-    border-radius: 50%;
-    border: 4px solid #FFFFFF;
-}
-
-.checkbox-label input:checked ~ .checkbox-custom.circular::before {
-    border-radius: 50%;
-}
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900);body{font-family:Roboto,sans-serif}.heading{width:400px;margin:20px auto;color:#009bff;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;clear:both;display:block;padding:0 0}.card{width:400px;margin:10px auto;clear:both;display:block;padding:0 0}.card::after{clear:both;display:block;content:""}.card .circular-container{background-color:#0067ff;height:60px;border-radius:10px}.input-title{display:block;position:relative;clear:both;margin:0 0 0 70px;font-size:30px;color:rgba(255,255,255,.8);font-weight:500}.checkbox-label{display:block;position:absolute;margin:15px 0 0 40px;cursor:pointer;font-size:22px;line-height:24px;height:24px;width:24px;clear:both}.checkbox-label input{position:absolute;opacity:0;cursor:pointer}.checkbox-label .checkbox-custom{position:absolute;top:0;left:0;height:24px;width:24px;background-color:transparent;border-radius:5px;transition:all .3s ease-out;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-ms-transition:all .3s ease-out;-o-transition:all .3s ease-out;border:2px solid #fff}.checkbox-label input:checked~.checkbox-custom{background-color:#fff;border-radius:5px;-webkit-transform:rotate(0) scale(1);-ms-transform:rotate(0) scale(1);transform:rotate(0) scale(1);opacity:1;border:2px solid #fff}.checkbox-label .checkbox-custom::after{position:absolute;content:"";left:12px;top:12px;height:0;width:0;border-radius:5px;border:solid #009bff;border-width:0 3px 3px 0;-webkit-transform:rotate(0) scale(0);-ms-transform:rotate(0) scale(0);transform:rotate(0) scale(0);opacity:1;transition:all .3s ease-out;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-ms-transition:all .3s ease-out;-o-transition:all .3s ease-out}.checkbox-label input:checked~.checkbox-custom::after{-webkit-transform:rotate(45deg) scale(1);-ms-transform:rotate(45deg) scale(1);transform:rotate(45deg) scale(1);opacity:1;left:8px;top:3px;width:6px;height:12px;border:solid #009bff;border-width:0 2px 2px 0;background-color:transparent;border-radius:0}.checkbox-label .checkbox-custom::before{position:absolute;content:"";left:10px;top:10px;width:0;height:0;border-radius:5px;border:2px solid #fff;-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0)}.checkbox-label input:checked~.checkbox-custom::before{left:-3px;top:-3px;width:24px;height:24px;border-radius:5px;-webkit-transform:scale(3);-ms-transform:scale(3);transform:scale(3);opacity:0;z-index:999;transition:all .3s ease-out;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-ms-transition:all .3s ease-out;-o-transition:all .3s ease-out}.checkbox-label .checkbox-custom.circular{border-radius:50%;border:2px solid #fff}.checkbox-label input:checked~.checkbox-custom.circular{background-color:#fff;border-radius:50%;border:2px solid #fff}.checkbox-label input:checked~.checkbox-custom.circular::after{border:solid #0067ff;border-width:0 2px 2px 0}.checkbox-label .checkbox-custom.circular::after{border-radius:50%}.checkbox-label .checkbox-custom.circular::before{border-radius:50%;border:4px solid #fff}.checkbox-label input:checked~.checkbox-custom.circular::before{border-radius:50%}
